# beacn-utility

./: .gitignore  50-beacn-mic.rules  50-beacn.rules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  com.github.beacn-on-linux.desktop  com.github.beacn-on-linux.yml  flatpak-build.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ci/: build-packages
.github/workflows/: build-release.yml  build.yml  get-version.yml  release.yml  update-generated.yml
resources/desktop/: beacn-utility.desktop  io.github.beacn_on_linux.beacn-utility.desktop
resources/flatpak/: com.github.beacn-on-linux.desktop  com.github.beacn-on-linux.metainfo.xml  io.github.beacn_on_linux.beacn-utility.desktop
resources/icons/: generate_icons.sh
resources/screens/: header.psd
resources/ui/icons/: README.md
src/: app.rs  device_manager.rs  main.rs  numbers.rs  state.rs  stop.rs  tray.rs  widgets.rs  window_handle.rs
src/audio_pages/: about.rs  config.rs  error.rs  lighting.rs  mod.rs
src/audio_pages/config_pages/: compressor.rs  expander.rs  headphones.rs  mic_setup.rs  mod.rs  suppressor.rs
src/audio_pages/config_pages/equaliser/: parametric_eq.rs
src/controller_pages/: about.rs  mod.rs
src/integrations/: README.md  mod.rs
src/integrations/pipeweaver/: README.md  channel.rs  layout.rs  mod.rs
src/managers/: ipc.rs  login.rs  mod.rs  tray.rs
src/pages/: about.rs  config.rs  error.rs  lighting.rs  mod.rs
src/pages/config_pages/: compressor.rs  equaliser.rs  expander.rs  headphones.rs  mic_setup.rs  mod.rs  suppressor.rs
src/pages/config_pages/equaliser/: equaliser_util.rs  mod.rs  parametric_eq.rs
src/states/: audio_state.rs  controller_state.rs  mod.rs
src/ui/: app.rs  app_settings.rs  mixer_page.rs  mod.rs  pages.rs  widgets.rs
src/ui/audio_pages/: about.rs  config.rs  error.rs  lighting.rs  link.rs  mod.rs
src/ui/audio_pages/config_pages/: compressor.rs  expander.rs  headphones.rs  mic_equaliser.rs  mic_setup.rs  mod.rs  suppressor.rs
src/ui/audio_pages/config_pages/equaliser/: eq_common.rs  eq_controls.rs  eq_drawer.rs  equaliser_util.rs  mod.rs  parametric_eq.rs
src/ui/audio_pages/equaliser/: eq_drawer.rs  mod.rs
src/ui/audio_pages/pipewire/: device_locater.rs  mod.rs  spectrum.rs
src/ui/controller_pages/: about.rs  error.rs  mod.rs
src/ui/shared_pages/: errors.rs
src/ui/states/: audio_state.rs  controller_state.rs  mod.rs  pipeweaver_state.rs
