[package]
name = "beacn-utility"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging
log = "0.4.27"
simplelog = "0.12.2"

# Error Handling
anyhow = "1.0.98"

# Enum Helpers
strum = "0.27.1"
strum_macros = "0.27.1"
enum-map = "2.7.3"

# Used for Sending and Receiving Messages
oneshot = "0.1.11"

# Used for SIMD EQ calculations
wide = "0.7.33"

# UI Framework and Window Management
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["svg"] }
egui-winit = "0.32.0"
egui_glow = "0.32.0"
glutin = "0.32.3"

# Grab beacn-mic-lib for comms
beacn-lib = { git = "https://github.com/beacn-on-linux/beacn-lib.git" }
#beacn-lib = { path = "../beacn-lib" }

# Used for Lazy Initialisation
once_cell = "1.21.3"

# Tray Handler
ksni = { version = "0.3.1", features = ["blocking"] }

# Image Handling
image = "0.25.6"
fontdue = "0.9.3"

# Apature Science Handheld Portal Device (autostart / background)
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
ashpd = { version = "0.11.0", features = ["raw_handle"] }

# For Creating .desktop files outside the flatpak runtime
rust-ini = "0.21.1"
xdg = "3.0.0"

# Profile Loading / Saving
serde = "1.0.219"
serde_json = "1.0.140"

# Sleep Management
zbus = "5.7.1"

# Pipeweaver Stuff
pipeweaver-ipc = { git = "https://github.com/pipeweaver/pipeweaver" }
pipeweaver-profile = { git = "https://github.com/pipeweaver/pipeweaver" }
pipeweaver-shared = { git = "https://github.com/pipeweaver/pipeweaver" }

# WINDOWS: Useful primarily for testing and comparison
[target.'cfg(windows)'.dependencies]
uds_windows = "1.1.0"
